style.less
/* ... */
a.button,
button,
html input[type="button"],
input[type="reset"],
input[type="submit"]{
	.vantage-button();
}

input[type="checkbox"],
input[type="radio"] {
	.box-sizing(border-box);
	padding: 0;
	/* Addresses excess padding in IE8/9 */
}

input[type="search"] {
	/* Addresses appearance set to searchfield in S5, Chrome */
	-webkit-appearance: textfield;

	/* Addresses box sizing set to border-box in S5, Chrome (include -moz to future-proof) */
	.box-sizing(border-box);
}

input[type="search"]::-webkit-search-decoration {
	/* Corrects inner padding displayed oddly in S5, Chrome on OSX */
	-webkit-appearance: none;
}

button::-moz-focus-inner,
input::-moz-focus-inner {
	/* Corrects inner padding and border displayed oddly in FF3/4 www.sitepen.com/blog/2008/05/14/the-devils-in-the-details-fixing-dojos-toolbar-buttons/ */
	border: 0;
	padding: 0;
}

input[type=text],
input[type=email],
input[type=password],
textarea {
	.box-sizing(border-box);
	color: #666;
	border: 1px solid #ccc;
	border-radius: 3px;
}

input[type=text]:focus,
input[type=email]:focus,
input[type=password]:focus,
textarea:focus {
	color: #111;
}

input[type=text],
input[type=email],
input[type=password] {
	padding: 3px;
}

textarea {
	/* Removes default vertical scrollbar in IE6/7/8/9 */
	overflow: auto;
	/* Improves readability and alignment in all browsers */
	vertical-align: top;
}

/* Alignment */

.alignleft {
	display: inline;
	float: left;
	margin-right: 1.5em;
}
.alignright {
	display: inline;
	float: right;
	margin-left: 1.5em;
}
.aligncenter {
	clear: both;
	display: block;
	margin: 0 auto;
}

/* Text meant only for screen readers */

.assistive-text {
	clip: rect(1px 1px 1px 1px);
/* IE6, IE7 */

	clip: rect(1px, 1px, 1px, 1px);
	position: absolute !important;
}

.page-links{
	clear:both;
}

#site-title a{
	color: inherit;
}


body {
	background: #dadada;
}

/* =General Layout
----------------------------------------------- */

#page-wrapper {
	padding-top: 20px;
	.box-sizing(border-box);
	width: 1080px;
	margin: 0 auto;
}

.layout-full #page-wrapper{
	width: 100%;
	margin: 0;
	padding: 0;
	overflow: hidden;

	.full-container {
		max-width: 1080px;
		margin-left: auto;
		margin-right: auto;
		position: relative;
	}
}

@media  (max-width:1080px){
	.responsive.layout-boxed #page-wrapper{
		margin: 0;
		padding: 0;
	}

	.responsive.layout-boxed #colophon {
		margin-bottom: 0;
	}
}

#masthead {
	background: #fcfcfc;
	padding: 0 35px 0 35px;
	.box-sizing(border-box);

	.hgroup {
		.clearfix();

		position: relative;
		padding-top: 45px;
		padding-bottom: 45px;

		a {
			text-decoration: none;
		}

		h1 {
			color: #666666;
			font-weight: 100;
			font-size: 36px;
			line-height: 1em;
		}

		.logo {
			display: block;
			float: left;
			max-width: 100%;

			img {
				vertical-align:bottom;
			}
		}

		.support-text {
			line-height: 1.2em;
			position: absolute;
			right: 0;
			top: 50%;
			margin-top: -0.6em;
			color: #4b4b4b;
			font-style: italic;
			max-width: 50%;
		}

		#header-sidebar {
			padding-top: 15px;
			padding-bottom: 15px;
			height: 100%;
			position: absolute;
			right: 0;
			top: 0;

			.box-sizing(border-box);

			/* Center align layout. Based on old CSS3 spec, so update when new spec is available and supported */

			-ms-flex-pack:center;
			-ms-flex-align:center;
			display:-ms-flexbox;

			-moz-box-pack:center;
			-moz-box-align:center;
			display:-moz-box;

			-webkit-box-pack:center;
			-webkit-box-align:center;
			display:-webkit-box;

			display:box;
			box-pack:center;
			box-align:center;

			aside.widget {
				margin-bottom: 0;
				float: left;
				position: relative;
				margin-right: 25px;

				&:last-child {
					margin-right: 0;
				}
			}

			.widget-title {
				font-weight: bold;
				margin-bottom: 5px;
			}
		}
	}

	&.masthead-logo-in-menu {
		.logo {
			float: left;
			padding: 12px 0;
			margin-right: 15px;

			> * {
				display: block;
			}

			> img {
				max-height: 35px;
				width: auto;

				height: auto;
				max-width: 100%;
			}

			> img.logo-no-height-constrain {
				max-height: none;
			}

		}
	}
}

.layout-boxed #masthead.masthead-logo-in-menu {
	img.logo {
		margin-left: 25px;
	}
}

body.ie-8,body.ie-9 {
	#masthead .hgroup {
		#header-sidebar {
			padding-top: 40px;
			padding-bottom: 40px;
		}
	}
}

#main {
	.clearfix();
}

#primary {
	float: left;
	width: 71.287%;
}

body.sidebar-position-left #primary {
	float: right;
}

body.sidebar-position-none #primary {
	float: none;
	width: auto;
}

body.no-sidebar #primary {
	float: none;
	width: auto;
}

/* Full Width Primary blocks */
body.vantage-layout-width-full-width #primary,
body.vantage-layout-width-full-width-stretched #primary {
	width: auto;
	float: none;
}

.vantage-layout-width-full-width-stretched #main > .full-container {
	max-width: 100% !important;
}

.vantage-layout-width-normal #primary {
	float: left;
	width: 71.287%;
}

#secondary {
	float: right;
	width: 23.762%;
}

body.sidebar-position-left #secondary {
	float: left;
}

body.sidebar-position-none #secondary {
	display: none;
}

#main {
	background: #fcfcfc;
	padding: 35px;
}

#main-slider {
	line-height: 0;
	background: #eeeeee;

	.flexslider {
		margin-bottom: 0;
	}

	h1 {
		font-weight: 100;
		text-shadow: 0 1px 1px rgba(0,0,0,0.5);
	}

	.text-em-wrapper {
		padding: 10px 50px;
		background: rgba(0,0,0,0.25);
		border: 3px solid white;
		font-weight: bold;
	}

	.metaslider, #metaslider-demo {
		margin: 0 auto;
	}

	#metaslider-demo {
		text-align: center;
	}
}
/* ... */

